--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@dcloudio/uni-quickapp-vue": "^2.0.0-26920200424005",
     "@dcloudio/uni-stat": "^2.0.0-26920200424005",
     "core-js": "^3.6.4",
+    "dingtalk-jsapi": "^2.10.3",
     "flyio": "^0.6.2",
     "regenerator-runtime": "^0.12.1",
     "vue": "^2.6.11",
