--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "cross-env": "^7.0.2",
     "mini-types": "*",
     "miniprogram-api-typings": "*",
+    "node-sass": "^4.14.1",
     "postcss-comment": "^2.0.0",
     "vue-template-compiler": "^2.6.11"
   },
