--- a/package.json
+++ b/package.json
@@ -71,6 +71,8 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
     "eslint-plugin-vue": "^6.2.2",
+    "less": "^3.11.3",
+    "less-loader": "^6.1.3",
     "mini-types": "*",
     "miniprogram-api-typings": "^2.11.0",
     "node-sass": "^4.14.1",
