--- a/deploy/devops-test.yaml
+++ b/deploy/devops-test.yaml
@@ -22,6 +22,21 @@ spec:
       annotations:
         kubesphere.io/containerSecrets: '{"uniapp":"harbor-id"}'
     spec:
+      volumes:
+        - name: volume-emdqlo
+          configMap:
+            name: uniapp-nginxconf
+            items:
+              - key: nginx.conf
+                path: nginx.conf
+            defaultMode: 420
+        - name: volume-gzjust
+          configMap:
+            name: uniapp-nginxconf
+            items:
+              - key: default.conf
+                path: default.conf
+            defaultMode: 420
       containers:
         - name: uniapp
           image: $REGISTRY/$DOCKERHUB_NAMESPACE/$APP_NAME:v1.0.0.$BUILD_NUMBER
@@ -33,6 +48,13 @@ spec:
             requests:
               cpu: 10m
               memory: 10Mi
+          volumeMounts:
+            - name: volume-emdqlo
+              mountPath: /etc/nginx/nginx.conf
+              subPath: nginx.conf
+            - name: volume-gzjust
+              mountPath: /etc/nginx/conf.d/default.conf
+              subPath: default.conf
           terminationMessagePath: /dev/termination-log
           terminationMessagePolicy: File
           imagePullPolicy: IfNotPresent
