--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "core-js": "^3.6.4",
     "dingtalk-jsapi": "^2.11.15",
     "flyio": "^0.6.2",
+    "qrcodejs2": "0.0.2",
     "regenerator-runtime": "^0.12.1",
     "vue": "^2.6.11",
     "vuex": "^3.5.1"
