--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "flyio": "^0.6.2",
     "qrcodejs2": "0.0.2",
     "regenerator-runtime": "^0.12.1",
+    "uni-simple-router": "^1.5.5",
     "vue": "^2.6.11",
     "vuex": "^3.5.1"
   },
