--- a/package.json
+++ b/package.json
@@ -29,44 +29,44 @@
     "serve:quickapp-vue": "node node_modules/@dcloudio/uni-quickapp-vue/bin/serve.js"
   },
   "dependencies": {
-    "@dcloudio/uni-app-plus": "^2.0.0-28320200727001",
-    "@dcloudio/uni-h5": "^2.0.0-28320200727001",
-    "@dcloudio/uni-helper-json": "*",
-    "@dcloudio/uni-mp-alipay": "^2.0.0-28320200727001",
-    "@dcloudio/uni-mp-baidu": "^2.0.0-28320200727001",
-    "@dcloudio/uni-mp-qq": "^2.0.0-28320200727001",
-    "@dcloudio/uni-mp-toutiao": "^2.0.0-28320200727001",
-    "@dcloudio/uni-mp-weixin": "^2.0.0-28320200727001",
+    "@dcloudio/uni-app-plus": "^2.0.0-28820200820001",
+    "@dcloudio/uni-h5": "^2.0.0-28820200820001",
+    "@dcloudio/uni-helper-json": "^1.0.6",
+    "@dcloudio/uni-mp-alipay": "^2.0.0-28820200820001",
+    "@dcloudio/uni-mp-baidu": "^2.0.0-28820200820001",
+    "@dcloudio/uni-mp-qq": "^2.0.0-28820200820001",
+    "@dcloudio/uni-mp-toutiao": "^2.0.0-28820200820001",
+    "@dcloudio/uni-mp-weixin": "^2.0.0-28820200820001",
     "@dcloudio/uni-quickapp-light": "^2.0.0-26920200424005",
     "@dcloudio/uni-quickapp-vue": "^2.0.0-26920200424005",
-    "@dcloudio/uni-stat": "^2.0.0-28320200727001",
+    "@dcloudio/uni-stat": "^2.0.0-28820200820001",
     "core-js": "^3.6.4",
-    "dingtalk-jsapi": "^2.11.15",
+    "dingtalk-jsapi": "^2.12.2",
     "flyio": "^0.6.2",
     "qrcodejs2": "0.0.2",
     "regenerator-runtime": "^0.12.1",
     "uni-simple-router": "^1.5.5",
-    "vue": "^2.6.11",
+    "vue": "^2.6.12",
     "vuex": "^3.5.1"
   },
   "devDependencies": {
     "@dcloudio/types": "^1.1.1",
-    "@dcloudio/uni-cli-shared": "^2.0.0-28320200727001",
-    "@dcloudio/uni-migration": "^2.0.0-28320200727001",
-    "@dcloudio/uni-template-compiler": "^2.0.0-28320200727001",
-    "@dcloudio/uni-ui": "^1.2.4",
-    "@dcloudio/vue-cli-plugin-hbuilderx": "^2.0.0-28320200727001",
-    "@dcloudio/vue-cli-plugin-uni": "^2.0.0-28320200727001",
-    "@dcloudio/vue-cli-plugin-uni-optimize": "^2.0.0-28320200727001",
-    "@dcloudio/webpack-uni-mp-loader": "^2.0.0-28320200727001",
-    "@dcloudio/webpack-uni-pages-loader": "^2.0.0-28320200727001",
+    "@dcloudio/uni-cli-shared": "^2.0.0-28820200820001",
+    "@dcloudio/uni-migration": "^2.0.0-28820200820001",
+    "@dcloudio/uni-template-compiler": "^2.0.0-28820200820001",
+    "@dcloudio/uni-ui": "^1.2.5",
+    "@dcloudio/vue-cli-plugin-hbuilderx": "^2.0.0-28820200820001",
+    "@dcloudio/vue-cli-plugin-uni": "^2.0.0-28820200820001",
+    "@dcloudio/vue-cli-plugin-uni-optimize": "^2.0.0-28820200820001",
+    "@dcloudio/webpack-uni-mp-loader": "^2.0.0-28820200820001",
+    "@dcloudio/webpack-uni-pages-loader": "^2.0.0-28820200820001",
     "@typescript-eslint/eslint-plugin": "^2.34.0",
     "@typescript-eslint/parser": "^2.34.0",
     "@vue/cli-plugin-babel": "~4.3.0",
     "@vue/cli-service": "~4.3.0",
     "babel-plugin-import": "^1.11.0",
     "cross-env": "^7.0.2",
-    "eslint": "^7.6.0",
+    "eslint": "^7.8.1",
     "eslint-config-standard": "^14.1.1",
     "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-node": "^11.1.0",
@@ -75,12 +75,12 @@
     "eslint-plugin-vue": "^6.2.2",
     "less": "^3.12.2",
     "less-loader": "^6.2.0",
-    "mini-types": "^0.1.3",
+    "mini-types": "^0.1.4",
     "miniprogram-api-typings": "^2.12.0",
     "node-sass": "^4.14.1",
     "postcss-comment": "^2.0.0",
     "sass-loader": "^8.0.2",
-    "vue-template-compiler": "^2.6.11"
+    "vue-template-compiler": "^2.6.12"
   },
   "browserslist": [
     "Android >= 4",
